# simulate-u1406330

./: .gitignore  CMakeLists.txt  PROMPT.md  README.md  RESULTS.md  agents.md  vcpkg.json
data/: cow_scene.csv  creeper_scene.csv  neutral_scene.csv
include/sim/: ImageSampling.h  Math.h  Scenario.h  SceneColorize.h  SceneCsv.h  SceneSetup.h  Simulation.h
src/: ImageSampling.cpp  Scenario.cpp  SceneColorize.cpp  SceneColorizeMain.cpp  SceneCsv.cpp  Simulation.cpp  ValidationMain.cpp  main.cpp
tests/: ImageSamplingTests.cpp  SceneColorizeTests.cpp  SimulationTests.cpp  ValidationMain.cpp
